oscilloscope/crates/oscilloscope/src/snapshots/osp__tui__golden_tests__cancelled_row_with_no_final_write_yet.snap
---
source: crates/oscilloscope/src/tui.rs
expression: text
---
"┌────────────────────────────────────────────────────────────────────┐"
"│do-thing.yml  cof  aborted  5.0s  effects 0/3+  ↑0 ↓0               │"
"└────────────────────────────────────────────────────────────────────┘"
"┌ plan ──────────────────────────────────┐┌ details ─────────────────┐"
"│⊘ prime                                 ││path   prime.a            │"
"│⊘ a  shell                              ││type   tool               │"
"│· b                                     ││plan   tool "a"           │"
"│· fan                                   ││provider shell            │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"└────────────────────────────────────────┘└──────────────────────────┘"
"┌ log ───────────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
