oscilloscope/crates/oscilloscope/src/snapshots/osp__tui__golden_tests__failed.snap
---
source: crates/oscilloscope/src/tui.rs
expression: text
---
"┌────────────────────────────────────────────────────────────────────┐"
"│do-thing.yml  cof  failed  5.0s  effects 1/3+  ↑0 ↓0                │"
"└────────────────────────────────────────────────────────────────────┘"
"┌ plan ──────────────────────────────────┐┌ details ─────────────────┐"
"│✗ prime                                 ││path   prime.a            │"
"│✗ a  shell                              ││type   tool               │"
"│↷ b                                     ││plan   tool "a"           │"
"│↷ fan                                   ││providershell             │"
"│                                        ││                          │"
"│                                        ││error  /bin/ls failed     │"
"│                                        ││(exit 1): ls: no          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"└────────────────────────────────────────┘└──────────────────────────┘"
"┌ log ───────────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
