oscilloscope/crates/oscilloscope/src/snapshots/osp__tui__golden_tests__failed_and_handled.snap
---
source: crates/oscilloscope/src/tui.rs
expression: text
---
"┌────────────────────────────────────────────────────────────────────┐"
"│do-thing.yml  cof  ok  5.0s  effects 2/3  ↑0 ↓0                     │"
"└────────────────────────────────────────────────────────────────────┘"
"┌ plan ──────────────────────────────────┐┌ details ─────────────────┐"
"│✓ prime                                 ││path   prime.b            │"
"│✓ a  shell                              ││type   tool               │"
"│! b  shell                              ││plan   tool "b"           │"
"│↷ fan                                   ││providershell             │"
"│                                        ││                          │"
"│                                        ││error  /bin/ls failed     │"
"│                                        ││(exit 1): ls: no          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"└────────────────────────────────────────┘└──────────────────────────┘"
"┌ log ───────────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
