oscilloscope/crates/oscilloscope/src/snapshots/osp__tui__golden_tests__header_reads_cancelled_once_the_final_state_lands.snap
---
source: crates/oscilloscope/src/tui.rs
expression: text
---
"┌────────────────────────────────────────────────────────────────────┐"
"│do-thing.yml  cof  cancelled  5.0s  effects 1/3+  ↑0 ↓0             │"
"└────────────────────────────────────────────────────────────────────┘"
"┌ plan ──────────────────────────────────┐┌ details ─────────────────┐"
"│✗ prime                                 ││path   prime.a            │"
"│✓ a  shell                              ││type   tool               │"
"│↷ b                                     ││plan   tool "a"           │"
"│↷ fan                                   ││provider shell            │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"└────────────────────────────────────────┘└──────────────────────────┘"
"┌ log ───────────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
