oscilloscope/crates/oscilloscope/src/snapshots/osp__tui__golden_tests__osp_watch.snap
---
source: crates/oscilloscope/src/tui.rs
expression: text
---
"┌────────────────────────────────────────────────────────────────────┐"
"│do-thing.yml  watch  running  5.0s  effects 0/3+  ↑0 ↓0             │"
"└────────────────────────────────────────────────────────────────────┘"
"┌ plan ──────────────────────────────────┐┌ details ─────────────────┐"
"│◐ prime                                 ││path   prime.a            │"
"│◐ a  shell                              ││type   tool               │"
"│· b                                     ││plan   tool "a"           │"
"│· fan                                   ││providershell             │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"└────────────────────────────────────────┘└──────────────────────────┘"
"┌ log ───────────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
