oscilloscope/crates/oscilloscope/src/snapshots/osp__tui__golden_tests__pending_plan.snap
---
source: crates/oscilloscope/src/tui.rs
expression: text
---
"┌────────────────────────────────────────────────────────────────────┐"
"│do-thing.yml  cof  running  5.0s  effects 0/3+  ↑0 ↓0               │"
"└────────────────────────────────────────────────────────────────────┘"
"┌ plan ──────────────────────────────────┐┌ details ─────────────────┐"
"│· prime                                 ││path   prime.a            │"
"│· a                                     ││type   tool               │"
"│· b                                     ││plan   tool "a"           │"
"│· fan                                   ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"└────────────────────────────────────────┘└──────────────────────────┘"
"┌ log ───────────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
