oscilloscope/crates/oscilloscope/src/snapshots/osp__tui__golden_tests__running_tree_loop_with_two_passes_done.snap
---
source: crates/oscilloscope/src/tui.rs
expression: text
---
"┌────────────────────────────────────────────────────────────────────┐"
"│do-thing.yml  cof  running  5.0s  effects 4/6  ↑0 ↓0  ETA 2.0s      │"
"└────────────────────────────────────────────────────────────────────┘"
"┌ plan ──────────────────────────────────┐┌ details ─────────────────┐"
"│◐ prime                                 ││path   prime.fan          │"
"│✓ a  shell                              ││type   loop               │"
"│✓ b  shell                              ││plan   loop "fan"         │"
"│◐ fan  2/4                              ││                          │"
"│  ✓ iter_0  shell                       ││                          │"
"│  ✓ iter_1  shell                       ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"│                                        ││                          │"
"└────────────────────────────────────────┘└──────────────────────────┘"
"┌ log ───────────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
